JSW Devsb/src/objects/Visit__c.object
<CustomObject>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Owner__c</fullName>
        <formula>Owner:User.State</formula>
        <label>State(Owner)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_level_JSW__c</fullName>
        <label>JSW stock level (number of bags)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_level__c</fullName>
        <label>Stock level</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_Comments__c</fullName>
        <label>Technical Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Product &amp; service briefing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product demonstration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>slab casting attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover block distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canopy activity</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_potential__c</fullName>
        <label>Total potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_product_qty_required_MT__c</fullName>
        <label>Total product qty required (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_project_duration_Months__c</fullName>
        <label>Total project duration (Months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>IF( Account__c != null, &apos;Account&apos;, &apos;&apos;) + 
 IF( Depot__c != null, &apos;Depot&apos;, &apos;&apos;) + 
 IF( Area__c != null , &apos;Area&apos;, &apos;&apos;) +
 IF( Business_Partner__c != null , &apos;Business Partner&apos;, &apos;&apos;) +
 IF( Customer_Type__c != null , &apos;Customer Type&apos;, &apos;&apos;) +
 IF( Event__c != null , &apos;Event&apos;, &apos;&apos;) +
 IF( Influencer__c != null , &apos;Influencer&apos;, &apos;&apos;) +
 IF( Lead__c != null , &apos;Lead&apos;, &apos;&apos;) +
 IF( Project_Site__c != null , &apos;Project Site&apos;, &apos;&apos;) +
 IF( Territory__c != null , &apos;Territory&apos;, &apos;&apos;) +
 IF( General_Visit__c = true , &apos;General&apos;, &apos;&apos;)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Activity__c</fullName>
        <label>Type of Activity</label>
        <picklist>
            <picklistValues>
                <fullName>SIte Mix Design Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slab Casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Plaster Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Godown visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage Assesment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer-Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Partner visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counter meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHB Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineers Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Govt Off Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Site Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mega Mason Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason Training Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engg College Lecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix Design Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Staff Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lab Based Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gift Transfer for Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NDT Testing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Conversion__c</fullName>
        <label>Type of Conversion</label>
        <picklist>
            <picklistValues>
                <fullName>New Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat Order</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Customer_Influencer__c</fullName>
        <label>Type of Customer/ Influencer</label>
        <picklist>
            <picklistValues>
                <fullName>Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mason</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing house</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others ( descriptive)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Material__c</fullName>
        <label>Type of Material</label>
        <picklist>
            <picklistValues>
                <fullName>PSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC/OPC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_Checked_In__c</fullName>
        <formula>Check_In__c   &lt;&gt; Null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visit Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Status__c</fullName>
        <formula>IF(Planned__c = true , &apos;Planned&apos;, &apos;Unplanned&apos;)+&apos; &apos;+ IF( Check_In__c != null, &apos;Visited&apos;, &apos;Not Visited&apos;)</formula>
        <label>Visit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <label>Visit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unplanned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visit_by_TSO_LATF__c</fullName>
        <label>Visit by TSO/LATF</label>
        <picklist>
            <picklistValues>
                <fullName>TSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATF</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visited_Location__c</fullName>
        <label>Visited Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Visited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_Plan_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Week Plan Submitted</label>
        <type>Checkbox</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <columns>Visit_Completed__c</columns>
        <columns>Visited__c</columns>
        <columns>Name__c</columns>
        <columns>Planned_Date__c</columns>
        <columns>Start__c</columns>
        <columns>End__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Pending_Visits</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Name__c</columns>
        <columns>Planned_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Planned_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Planned_Date__c</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Pending Visits</label>
    </listViews>
    <nameField>
        <label>Visit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <recordTypes>
        <fullName>Account</fullName>
        <active>true</active>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Check_Out</fullName>
        <active>true</active>
        <label>Account Check Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Master</fullName>
        <active>true</active>
        <label>Account Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Partner</fullName>
        <active>true</active>
        <label>Business Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Partner_Check_Out</fullName>
        <active>true</active>
        <label>Business Partner Check Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Partner_Master</fullName>
        <active>true</active>
        <label>Business Partner Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depot</fullName>
        <active>true</active>
        <label>Depot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depot_Check_Out</fullName>
        <active>true</active>
        <label>Depot Check Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Depot_Master</fullName>
        <active>true</active>
        <label>Depot Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Influencer</fullName>
        <active>true</active>
        <label>Influencer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Influencer_Check_Out</fullName>
        <active>true</active>
        <label>Influencer Check Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Influencer_Master</fullName>
        <active>true</active>
        <label>Influencer Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Check_Out</fullName>
        <active>true</active>
        <label>Lead Check Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead_Master</fullName>
        <active>true</active>
        <label>Lead Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Site</fullName>
        <active>true</active>
        <label>Project Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Site_Check_Out</fullName>
        <active>true</active>
        <label>Project Site Check Out</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Site_Master</fullName>
        <active>true</active>
        <label>Project Site Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LATF_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(Visit_by_TSO_LATF__c,&apos;LATF&apos;), ISPICKVAL( LATF_Name__c ,&apos;&apos;) ), true, false)</errorConditionFormula>
        <errorDisplayField>LATF_Name__c</errorDisplayField>
        <errorMessage>Please enter LATF Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Record_Saving</fullName>
        <active>false</active>
        <errorConditionFormula>OR( 
AND( NOT( ISBLANK( Account__c ) ) , OR( ISBLANK( Business_Partner__c ) , ISBLANK( Customer_Type__c ) , ISBLANK( Event__c ) , ISBLANK( Influencer__c ) , ISBLANK( Lead__c ) , ISBLANK( Project_Site__c ) , ISBLANK( Territory__c ) ) ) , 
AND( NOT( ISBLANK( Business_Partner__c ) ) , OR( ISBLANK( Account__c ) , ISBLANK( Customer_Type__c ) , ISBLANK( Event__c ) , ISBLANK( Influencer__c ) , ISBLANK( Lead__c ) , ISBLANK( Project_Site__c ) , ISBLANK( Territory__c ) ) ) , 
AND( NOT( ISBLANK( Customer_Type__c ) ) , OR( ISBLANK( Business_Partner__c ) , ISBLANK( Account__c ) , ISBLANK( Event__c ) , ISBLANK( Influencer__c ) , ISBLANK( Lead__c ) , ISBLANK( Project_Site__c ) , ISBLANK( Territory__c ) ) ) , 
AND( NOT( ISBLANK( Event__c ) ) , OR( ISBLANK( Business_Partner__c ) , ISBLANK( Customer_Type__c ) , ISBLANK( Account__c ) , ISBLANK( Influencer__c ) , ISBLANK( Lead__c ) , ISBLANK( Project_Site__c ) , ISBLANK( Territory__c ) ) ) , 
AND( NOT( ISBLANK( Influencer__c ) ) , OR( ISBLANK( Business_Partner__c ) , ISBLANK( Customer_Type__c ) , ISBLANK( Event__c ) , ISBLANK( Account__c ) , ISBLANK( Lead__c ) , ISBLANK( Project_Site__c ) , ISBLANK( Territory__c ) ) ) , 
AND( NOT( ISBLANK( Lead__c ) ) , OR( ISBLANK( Business_Partner__c ) , ISBLANK( Customer_Type__c ) , ISBLANK( Event__c ) , ISBLANK( Influencer__c ) , ISBLANK( Account__c ) , ISBLANK( Project_Site__c ) , ISBLANK( Territory__c ) ) ) , 
AND( NOT( ISBLANK( Project_Site__c ) ) , OR( ISBLANK( Business_Partner__c ) , ISBLANK( Customer_Type__c ) , ISBLANK( Event__c ) , ISBLANK( Influencer__c ) , ISBLANK( Lead__c ) , ISBLANK( Account__c ) , ISBLANK( Territory__c ) ) ) , 
AND( NOT( ISBLANK( Territory__c ) ) , OR( ISBLANK( Business_Partner__c ) , ISBLANK( Customer_Type__c ) , ISBLANK( Event__c ) , ISBLANK( Influencer__c ) , ISBLANK( Lead__c ) , ISBLANK( Project_Site__c ) , ISBLANK( Account__c ) ) ) )</errorConditionFormula>
        <errorMessage>Enter any one value from  Account,Lead,Event,Area,Business partner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Site_Type_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( ISPICKVAL( Activity_Sub_Type__c , &apos;Site demo&apos;) , ISPICKVAL( Site_demo_type__c , &apos;&apos;) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Site_demo_type__c</errorDisplayField>
        <errorMessage>Please enter site demo type</errorMessage>
    </validationRules>
</CustomObject>